Fix cupid banner size on Safari

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -88,6 +88,7 @@ body {
 }
 
 .cupid-banner__background {
+  width: 100%;
   position: absolute;
   left: 0;
   bottom: 0;
